[package]
name = "common"
version = "0.1.0"
authors = ["Martin Billinger <mbillingr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
hex = "0.4"
itertools = "0.9"
regex = "1.4"
terminal_size = "0.1"
